k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myionio-backend
  namespace: myionio-prod
spec:
  replicas: 2 # Scalability!
  selector:
    matchLabels:
      app: myionio-backend
  template:
    metadata:
      labels:
        app: myionio-backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/odysseaskalaitsidis/myionio-backend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myionio-backend-service
  namespace: myionio-prod
spec:
  selector:
    app: myionio-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
