k8s/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myionio-kafka
  namespace: myionio-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myionio-kafka
  template:
    metadata:
      labels:
        app: myionio-kafka
    spec:
      containers:
      - name: kafka
        image: apache/kafka:latest
        ports:
        - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: myionio-kafka-service
  namespace: myionio-prod
spec:
  selector:
    app: myionio-kafka
  ports:
  - protocol: TCP
    port: 9092
    targetPort: 9092
