k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myionio-ingress
  namespace: myionio-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myionio.site
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: myionio-backend-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myionio-frontend-service
            port:
              number: 80
